--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - "config/*.yml"
       - "content/**"
       - "mkdocs.yml"
-      - "requirements*.txt"
+      - "requirements.txt"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -48,11 +48,9 @@ jobs:
           cache: "pip"
 
       - name: Install dependencies
-        env:
-          GH_TOKEN_MATERIAL_INSIDERS: ${{ secrets.GH_TOKEN_MATERIAL_INSIDERS }}
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade -r requirements-insiders.txt
+          python -m pip install --upgrade -r requirements.txt
 
       - name: Cache build dependencies (external assets downloaded)
         uses: actions/cache@v4
@@ -62,7 +60,7 @@ jobs:
 
       - name: Build static website
         run: |
-          python scripts/mkdocs_config_merger.py -c mkdocs.yml
+          python scripts/100_mkdocs_config_merger.py -c mkdocs.yml
           mkdocs build --config-file mkdocs.yml --strict
         env:
           MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS: true
@@ -72,7 +70,7 @@ jobs:
           MKDOCS_ENABLE_PLUGIN_RSS: true
           MKDOCS_ENABLE_PLUGIN_SOCIAL: true
           MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS: true
-          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GH_TOKEN_MATERIAL_INSIDERS }}
+          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GITHUB_TOKEN }}
           MKDOCS_MATOMO_SITE_ID: 5
           MKDOCS_MATOMO_URL_BASE: https://matomo.data-wax.com
 
