--- a/.github/workflows/pr_checker_build.yml
+++ b/.github/workflows/pr_checker_build.yml
@@ -14,7 +14,6 @@ env:
   NETLIFY_SITE_PREFIX: geotribu-contribuer-${{ github.event.pull_request.number }}
   PR_NUMBER: ${{ github.event.pull_request.number }}
 
-
 # If the workflow for a PR is triggered multiple times, previous existing runs will be canceled.
 # eg: Applying multiple suggestions from a review directly via the Github UI.
 # Instances of the 2nd phase of this workflow (via `workflow_run`) presently lack concurrency limits due to added complexity.
@@ -40,21 +39,9 @@ jobs:
 
       - name: Install dependencies
         id: dependencies
-        env:
-          GH_TOKEN_MATERIAL_INSIDERS: ${{ secrets.GH_TOKEN_MATERIAL_INSIDERS }}
         run: |
           python -m pip install -U pip setuptools wheel
-
-          # if secret (PR created by repo collaborator) exists = paid features, else only free
-          if [[ -z "${GH_TOKEN_MATERIAL_INSIDERS}" ]]; then
-            echo "::warning:: L'accès aux token est réservé aux comptes avec droits d'écriture sur le dépôt. La version gratuite du thème est donc utilisée sans mots-clés, etc.)"
-            python -m pip install -U -r requirements-free.txt
-            echo "MKDOCS_CONFIG_FILENAME=mkdocs-free.yml" >> $GITHUB_ENV
-          else
-            # install insiders version using token
-            python -m pip install -U -r requirements-insiders.txt
-            echo "MKDOCS_CONFIG_FILENAME=mkdocs.yml" >> $GITHUB_ENV
-          fi
+          python -m pip install -U -r requirements.txt
 
       - name: Cache build dependencies (external assets downloaded)
         uses: actions/cache@v4
@@ -64,33 +51,33 @@ jobs:
 
       - name: Build in strict mode
         env:
-          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GH_TOKEN_MATERIAL_INSIDERS }}
+          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GITHUB_TOKEN }}
           MKDOCS_ENABLE_PLUGIN_CARDS: true
           NETLIFY_BRANDING: '<a href="https://www.netlify.com/"><img alt="Deploys by Netlify" src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" style="float: right;"></a>'
         run: |
           # site name
-          sed -i "s|^site_name:.*|site_name: Contribution Geotribu PREVIEW |" ${{ env.MKDOCS_CONFIG_FILENAME }}
+          sed -i "s|^site_name:.*|site_name: Contribution Geotribu PREVIEW |" mkdocs.yml
 
-          # Adjust ${{ env.MKDOCS_CONFIG_FILENAME }} for preview build
-          sed -i "s|^site_url:.*|site_url: https://${NETLIFY_SITE_PREFIX}--${NETLIFY_SITE_NAME}.netlify.app/ |" ${{ env.MKDOCS_CONFIG_FILENAME }}
+          # Adjust mkdocs.yml for preview build
+          sed -i "s|^site_url:.*|site_url: https://${NETLIFY_SITE_PREFIX}--${NETLIFY_SITE_NAME}.netlify.app/ |" mkdocs.yml
 
           # Insert sponsor branding into page content (Provider OSS plan requirement):
           # Upstream does not provide a nicer maintainable way to do this..
           # Prepends HTML to copyright text and then aligns to the right side.
-          sed -i "s|^copyright: '|copyright: '${NETLIFY_BRANDING}|" ${{ env.MKDOCS_CONFIG_FILENAME }}
+          sed -i "s|^copyright: '|copyright: '${NETLIFY_BRANDING}|" mkdocs.yml
 
           # set repo and branch
-          sed -i "s|^repo_url:.*|repo_url: https://github.com/$GITHUB_REPOSITORY |" ${{ env.MKDOCS_CONFIG_FILENAME }}
-          sed -i "s|^edit_uri:.*|edit_uri: edit/$GITHUB_HEAD_REF/content |" ${{ env.MKDOCS_CONFIG_FILENAME }}
+          sed -i "s|^repo_url:.*|repo_url: https://github.com/$GITHUB_REPOSITORY |" mkdocs.yml
+          sed -i "s|^edit_uri:.*|edit_uri: edit/$GITHUB_HEAD_REF/content |" mkdocs.yml
 
           # merge different configs
-          python scripts/mkdocs_config_merger.py -c ${{ env.MKDOCS_CONFIG_FILENAME }}
+          python scripts/mkdocs_config_merger.py -c mkdocs.yml
 
           # build
-          mkdocs build --config-file ${{ env.MKDOCS_CONFIG_FILENAME }} --strict
+          mkdocs build --config-file mkdocs.yml --strict
 
           # save mkdocs.yml for debug
-          cp ${{ env.MKDOCS_CONFIG_FILENAME }} ${{ env.BUILD_DIR }}
+          cp mkdocs.yml ${{ env.BUILD_DIR }}
 
           # remove files reserved for production
           rm ${{ env.BUILD_DIR }}/CNAME
