--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,15 @@ pre-commit>=3.5,<5
 # Project requirements
 # -----------------------
 
-geotribu>=0.32,<1
-mkdocs-awesome-pages-plugin>=2.6,<2.11
-mkdocs-exclude>=1.0,<1.1
-mkdocs-git-authors-plugin<0.11
+geotribu>=0.35,<1
+mkdocs-awesome-pages-plugin>=2.10.1,<2.11
+mkdocs-exclude>=1.0.2,<1.1
+mkdocs-git-authors-plugin>=0.10,<1
 mkdocs-git-committers-plugin-2>=2.5.0,<2.6
-mkdocs-git-revision-date-localized-plugin>=1.4.7,<1.6
-mkdocs-glightbox>=0.4.0,<0.6
-mkdocs-macros-plugin>=1.4,<1.5
-mkdocs-minify-plugin<0.9
-mkdocs-redirects<1.3
-mkdocs-rss-plugin>=1.17,<1.18
-
-CairoSVG>=2.5,<3
-Pillow>=10.2,<12.1
+mkdocs-git-revision-date-localized-plugin>=1.5.0,<1.6
+mkdocs-glightbox>=0.5.2,<1
+mkdocs-macros-plugin>=1.4.1,<1.5
+mkdocs-material[imaging]>=9.7.0,<9.8
+mkdocs-minify-plugin==0.8.0
+mkdocs-redirects==1.2.2
+mkdocs-rss-plugin>=1.17.7,<1.18
