--- a/config/plugins_git-committers.yml
+++ b/config/plugins_git-committers.yml
@@ -7,6 +7,8 @@ git-committers:
       .cache/plugins/git-committers/,
     ]
   docs_path: content/
+  exclude_committers:
+    - pre-commit-ci[bot]
+    - web-flow
   repository: geotribu/site-contribuer
-  token:
-    !ENV ["MKDOCS_GIT_COMMITTERS_APIKEY", !ENV ["GH_TOKEN_MATERIAL_INSIDERS"]]
+  token: !ENV ["MKDOCS_GIT_COMMITTERS_APIKEY"]
