--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build static website
         run: |
           python scripts/100_mkdocs_config_merger.py -c mkdocs.yml
-          mkdocs build --config-file mkdocs.yml --strict
+          zensical build
         env:
           MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS: true
           MKDOCS_ENABLE_PLUGIN_GIT_COMMITTERS: true
