--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,27 +1,18 @@
-# Project information
-site_name: Contribuer à Geotribu
-site_description: >-
-  Guides de contribution au site participatif Geotribu et outillage interne.
-
+site_name: "Contribuer \xE0 Geotribu"
+site_description:
+  Guides de contribution au site participatif Geotribu et outillage
+  interne.
 site_author: Geotribu
 site_url: https://contribuer.geotribu.fr/
-copyright: '<span class="copyleft">&copy;</span> Geotribu'
-
-# Repository
-repo_name: !ENV [GITHUB_REPOSITORY, "geotribu/site-contribuer"]
-repo_url: !ENV [MKDOCS_REPO_URL, "https://github.com/geotribu/site-contribuer"]
-edit_uri: !ENV [MKDOCS_EDIT_URI, "edit/main/content"]
-
-# Custom folder structure
-docs_dir: "./content"
-site_dir: "./build/mkdocs/site"
-
-# Scripts pendant le build
+copyright: <span class="copyleft">&copy;</span> Geotribu
+repo_name: geotribu/site-contribuer
+repo_url: https://github.com/geotribu/site-contribuer
+edit_uri: edit/main/content
+docs_dir: ./content
+site_dir: ./build/mkdocs/site
 hooks:
   - hooks/mkdocs/G003_social_cards_adapter.py
   - hooks/mkdocs/G005_jinja_filters.py
-
-# Plugins
 plugins:
   - awesome-pages
   - exclude:
@@ -29,10 +20,10 @@ plugins:
         - "*/templates/*"
         - "*.yml"
   - git-authors:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS, true]
+      enabled: true
       show_contribution: true
   - git-revision-date-localized:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_DATES, true]
+      enabled: true
       enable_creation_date: true
       fallback_to_build_date: true
       locale: fr
@@ -56,20 +47,16 @@ plugins:
   - minify:
       minify_html: true
   - privacy:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_PRIVACY, true]
-      cache_dir:
-        !ENV [MKDOCS_PLUGIN_PRIVACY_EXTERNAL_CACHE_DIR, .cache/plugins/privacy]
+      enabled: true
+      cache_dir: .cache/plugins/privacy
       links_attr_map:
         target: _blank
       assets_exclude:
-        # mandatory - https://squidfunk.github.io/mkdocs-material/setup/ensuring-data-privacy/
         - cdn.jsdelivr.net/npm/mathjax@3/*
         - giscus.app/*
-        # geotribu
         - cdn.geotribu.fr/images/*
         - cdn.geotribu.fr/img/*
         - geotribu.net/*
-        # external
         - cdn.jsdelivr.net/**/*/twemoji*
         - cdnjs.cloudflare.com/ajax/libs/twemoji/*
         - github.com/**/*.gif
@@ -89,33 +76,43 @@ plugins:
         datetime_format: "%Y-%m-%d"
         default_timezone: Europe/Paris
         default_time: "19:00"
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_RSS, false]
+      enabled: true
       image: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
       length: 50
-      match_path: "(articles|edit|guides|internal|rdp)/.*"
-      pretty_print: false
+      match_path: (articles|edit|guides|internal|rdp)/.*
+      pretty_print: true
       use_material_social_cards: true
       url_parameters:
-        utm_source: "rss-feed"
-        utm_medium: "RSS"
-        utm_campaign: "feed-syndication"
+        utm_source: rss-feed
+        utm_medium: RSS
+        utm_campaign: feed-syndication
   - search:
       lang: fr
   - social:
-      enabled: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL, false]
-      cache_dir: !ENV [MKDOCS_PLUGIN_SOCIAL_CACHE_DIR, .cache/plugins/social]
-      cards: !ENV [MKDOCS_ENABLE_PLUGIN_SOCIAL_CARDS, false]
+      enabled: true
+      cache_dir: .cache/plugins/social
+      cards: true
       cards_exclude:
         - team/*.md
         - toc_nav_ignored/*.md
       cards_layout_options:
         background_color: "#3e93a7"
         font_family: Ubuntu
-
+  - tags:
+      enabled: true
+      tags_sort_by: !!python/name:material.plugins.tags.tag_name_casefold ""
+      listings_sort_by: !!python/name:material.plugins.tags.item_url ""
+  - git-committers:
+      enabled: true
+      branch: main
+      cache_dir: .cache/plugins/git-committers/
+      docs_path: content/
+      repository: geotribu/site-contribuer
+      token: R4c29x1UcWR3BHYgCyd8
 theme:
-  name: "material"
+  name: material
   insiders_flavor: true
-  custom_dir: "./content/theme/"
+  custom_dir: ./content/theme/
   favicon: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   features:
     - content.action.edit
@@ -141,13 +138,10 @@ theme:
   language: fr
   logo: theme/assets/images/geotribu/geotribu_logo_tipi_seul_carre.png
   palette:
-    # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
+    - media: (prefers-color-scheme)
       toggle:
         icon: material/brightness-auto
         name: Basculer en mode clair
-
-    # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
@@ -155,35 +149,198 @@ theme:
       toggle:
         icon: material/brightness-7
         name: Basculer en mode sombre
-
-    # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
       accent: amber
       toggle:
         icon: material/brightness-4
-        name: Basculer sur le réglage système
-
-# Customization
+        name: "Basculer sur le r\xE9glage syst\xE8me"
+  icon:
+    edit: material/pencil
+    repo: fontawesome/brands/github-alt
+    view: material/eye
+    tag:
+      default: fontawesome/solid/tag
+      ananas: material/fruit-pineapple
+      atlas: fontawesome/solid/book-atlas
+      balai: material/broom
+      brick: material/toy-brick
+      cerveau: material/brain
+      citrouille: material/pumpkin
+      code: fontawesome/solid/code
+      commentaires: fontawesome/solid/comments
+      conference: fontawesome/solid/person-chalkboard
+      database: fontawesome/solid/database
+      drone: material/drone
+      facebook: fontawesome/brands/facebook
+      feuille: fontawesome/solid/leaf
+      geoloupe: fontawesome/solid/magnifying-glass-location
+      git: fontawesome/brands/git-alt
+      globe: fontawesome/solid/earth-europe
+      google: fontawesome/brands/google
+      html: fontawesome/brands/html5
+      institution: fontawesome/solid/building-columns
+      js: fontawesome/brands/js
+      manette: fontawesome/solid/gamepad
+      markdown: fontawesome/brands/markdown
+      masques: fontawesome/solid/masks-theater
+      meridiens: fontawesome/solid/globe
+      moteur: material/engine
+      oeuf: fontawesome/solid/egg
+      open: fontawesome/solid/lock-open
+      opensource: material/open-source-initiative
+      pingouin: simple/linux
+      python: fontawesome/brands/python
+      roue: material/cog-play
+      route: fontawesome/solid/route
+      rstats: fontawesome/brands/r-project
+      satellite: fontawesome/solid/satellite-dish
+      streetview: fontawesome/solid/street-view
+      tente: material/tent
+      telephone: material/cellphone-marker
+      ubuntu: material/ubuntu
+      wikipedia: material/wikipedia
+      windows: fontawesome/brands/windows
 extra:
   geotribu_main_site: https://geotribu.fr/
   theme_insiders_flavor: true
   consent:
-    title: Consentement 🍪
+    title: "Consentement \U0001F36A"
     actions:
       - accept
       - reject
     cookies:
       analytics: matomo
-    description: >
-      Nous utilisons des cookies pour le goûter mais aussi pour vous proposer
-      des fonctionnalités (commentaires, thème clair ou sombre, etc.) et mesurer
-      l'audience du site.
-
+    description:
+      "Nous utilisons des cookies pour le go\xFBter mais aussi pour vous\
+      \ proposer des fonctionnalit\xE9s (commentaires, th\xE8me clair ou sombre, etc.)\
+      \ et mesurer l'audience du site.\n"
+  analytics:
+    provider: matomo
+    matomo_url: https://matomo.data-wax.com
+    matomo_site_id: 5
+  tags:
+    atlas: atlas
+    Bash: code
+    Centipede: satellite
+    CNIG: institution
+    collecte: telephone
+    collecte terrain: telephone
+    "conf\xE9rence": conference
+    coulisses: masques
+    cURL: code
+    D3.js: js
+    Easter eggs: oeuf
+    Esri: globe
+    ETL: roue
+    ExtJS: js
+    Facebook: facebook
+    FIG: conference
+    FME: roue
+    FOSS4G: conference
+    "G\xE9oCapot": moteur
+    "G\xE9oDataDays": conference
+    GeoGames: manette
+    GeoKettle: roue
+    Geotribu: tente
+    "g\xE9o-lecture": atlas
+    Git: git
+    GitHub: git
+    GitLab: git
+    Google: google
+    Google Earth: google
+    Google Maps: google
+    Google Street View: google
+    GraphHopper: route
+    Halloween: citrouille
+    HTML: html
+    HTML5: html
+    IA: cerveau
+    IGN: institution
+    Input: telephone
+    INSPIRE: ananas
+    IRC: commentaires
+    JavaScript: js
+    jeu: manette
+    "jeux vid\xE9o": manette
+    Leaflet: feuille
+    Lego: brick
+    LIDAR: satellite
+    lint: balai
+    linter: balai
+    livre: atlas
+    Linux: pingouin
+    Mapillary: streetview
+    Markdown: markdown
+    Matrix: commentaires
+    Minecraft: manette
+    MySQL: database
+    NoSQL: database
+    ODK: telephone
+    Open Data Kit: telephone
+    OpenDroneMap: drone
+    OpenPathView: streetview
+    OpenRouteService: route
+    open data: open
+    open source: opensource
+    OpenStreetMap: geoloupe
+    Ordnance Survey: institution
+    OSRM: route
+    Open Earth View: streetview
+    pgDay: database
+    pgRouting: route
+    PGSession: database
+    PostGIS: database
+    PostgreSQL: database
+    projection: meridiens
+    PyCSW: python
+    PyGEOS: python
+    PyQGIS: python
+    PyQt: python
+    PySQL: python
+    Python: python
+    PyWPS: python
+    QField: telephone
+    QGIS: globe
+    R: rstats
+    route: route
+    routing: route
+    SQL: database
+    three.js: js
+    Ubuntu: ubuntu
+    "Wikip\xE9dia": wikipedia
+    Windows: windows
+  social:
+    - icon: fontawesome/solid/rss
+      link: https://contribuer.geotribu.fr/feed_rss_created.xml
+      name: S'abonner aux nouveaux contenus via RSS
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/geotribu/
+      name: L'organisation Github de Geotribu
+    - icon: fontawesome/brands/mastodon
+      link: https://mapstodon.space/@geotribu
+      name: Geotribu sur Mapstodon
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/company/geotribu/
+      name: Les contenus de Geotribu sur LinkedIn
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/@geotribu
+      name: "Cha\xEEne Youtube de Geotribu"
+    - icon: fontawesome/brands/bluesky
+      link: https://bsky.app/profile/geotribu.bsky.social
+      name: Compte Bluesky de Geotribu
+    - icon: fontawesome/brands/mailchimp
+      link: http://eepurl.com/hL0zVr
+      name: "Abonnez-vous \xE0 la newsletter"
+    - icon: fontawesome/solid/paper-plane
+      link: mailto:<geotribu@gmail.com>
+      name: Nous contacter
+    - icon: fontawesome/solid/piggy-bank
+      link: https://fr.tipeee.com/geotribu
+      name: Le pot commun sur Tipee
 extra_css:
-  - "theme/assets/stylesheets/extra.css"
-
+  - theme/assets/stylesheets/extra.css
 extra_javascript:
   - path: https://mapstodon.space/embed.js
     defer: true
@@ -191,48 +348,41 @@ extra_javascript:
   - path: https://platform.twitter.com/widgets.js
     defer: true
     async: true
-
-# Extensions to enhance markdown - see: https://squidfunk.github.io/mkdocs-material/getting-started/#extensions
 markdown_extensions:
   - abbr
-  # Admonition - https://squidfunk.github.io/mkdocs-material/extensions/admonition/
   - admonition
   - attr_list
-  # Footnotes - https://squidfunk.github.io/mkdocs-material/reference/footnotes/
   - footnotes
   - md_in_html
-  # PyMdown extensions - https://squidfunk.github.io/mkdocs-material/extensions/pymdown/
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji ""
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg ""
   - pymdownx.highlight:
       use_pygments: true
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.smartsymbols
   - pymdownx.saneheaders
-  # https://facelessuser.github.io/pymdown-extensions/extensions/snippets/
   - pymdownx.snippets:
-      auto_append: [content/toc_nav_ignored/snippets/glossaire.md]
+      auto_append:
+        - content/toc_nav_ignored/snippets/glossaire.md
       base_path:
-        - "."
+        - .
       check_paths: true
       url_download: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+          format: !!python/name:pymdownx.superfences.fence_code_format ""
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
-  # Permalinks - https://squidfunk.github.io/mkdocs-material/extensions/permalinks/
   - toc:
       permalink: "#"
-
 validation:
   links:
     absolute_links: warn
