--- a/.github/workflows/pr_checker_build.yml
+++ b/.github/workflows/pr_checker_build.yml
@@ -88,7 +88,7 @@ jobs:
 
         # Minimize risk of upload failure by bundling files to a single compressed archive (tar + zstd).
         # Bundles build dir and env file into a compressed archive, nested file paths will be preserved.
-      - name: "Prepare artifact for transfer"
+      - name: Prepare artifact for transfer
         run: |
           # Save ENV for transfer
           echo "GITHUB_REPOSITORY=$GITHUB_REPOSITORY"                 >> pr.env
