--- a/.github/workflows/pr_checker_build.yml
+++ b/.github/workflows/pr_checker_build.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           python -m pip install -U pip setuptools wheel
           python -m pip install -U -r requirements.txt
+          python -m pip install mkdocs
 
       - name: Cache build dependencies (external assets downloaded)
         uses: actions/cache@v4
