update(plugin): hide author email addresses

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,10 @@ plugins:
         - "*.yml"
   - git-authors:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_AUTHORS, true]
+      add_co_authors: true
       show_contribution: true
+      show_email_address: false
+      sort_authors_by: contribution
   - git-revision-date-localized:
       enabled: !ENV [MKDOCS_ENABLE_PLUGIN_GIT_DATES, true]
       enable_creation_date: true
