--- a/config/extra_social.yml
+++ b/config/extra_social.yml
@@ -8,6 +8,9 @@ social:
   - icon: "fontawesome/brands/mastodon"
     link: https://mapstodon.space/@geotribu
     name: "Geotribu sur Mapstodon"
+  - icon: simple/matrix
+    link: "https://matrix.to/#/#geotribu:matrix.org"
+    name: "Rejoindre le chat Matrix de Geotribu"
   - icon: "fontawesome/brands/linkedin"
     link: https://www.linkedin.com/company/geotribu/
     name: "Les contenus de Geotribu sur LinkedIn"
