update(footer): minor change to sponsor hyperlink

--- a/config/extra_social.yml
+++ b/config/extra_social.yml
@@ -27,5 +27,5 @@ social:
     link: mailto:<geotribu@gmail.com>
     name: "Nous contacter"
   - icon: "fontawesome/solid/piggy-bank"
-    link: https://fr.tipeee.com/geotribu
-    name: "Le pot commun sur Tipee"
+    link: https://geotribu.fr/about/sponsoring/
+    name: "Sponsoriser Geotribu"
